[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scene/GUI/PlayerSelection.gd" type="Script" id=3]

[node name="Button" type="Button"]
margin_left = 30.0
margin_top = 18.0
margin_right = 78.0
margin_bottom = 66.0
toggle_mode = true
text = "|||"
script = ExtResource( 3 )

[node name="main1" type="Button" parent="."]
visible = false
margin_left = 58.0
margin_right = 109.0
margin_bottom = 48.0
text = "MENU"

[node name="main2" type="Button" parent="."]
visible = false
margin_left = 122.0
margin_right = 173.0
margin_bottom = 48.0
text = "EXIT"

[connection signal="toggled" from="." to="." method="_on_Button_toggled"]
[connection signal="pressed" from="main1" to="." method="_on_main1_pressed"]
[connection signal="pressed" from="main2" to="." method="_on_main2_pressed"]
